--- a/code/keenen/capstone/PEP/pep_app/static/pep_app/styles.css
+++ b/code/keenen/capstone/PEP/pep_app/static/pep_app/styles.css
@@ -25,13 +25,18 @@ tr:nth-child(even) {
 
 .topnav {
     display: flex;
-    justify-content: space-between;
+    justify-content:flex-start;
     align-items: center;
     overflow: hidden;
     background-color: #e9e9e9;
 }
 
+.search {
+    margin-left: auto;
+}
+
 .topnav div {
+    padding: 4px;
   display: flex;
 }
 
@@ -57,6 +62,15 @@ tr:nth-child(even) {
 
 .topnav input {
   justify-self: flex-end;
+}
+
+.topnav p {
+    display: block;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    font-size: 19px; 
+    justify-content: center;
 }
 
 .choose-state {
@@ -125,21 +139,22 @@ form {
     margin: 0em;
     
 } 
-/*  
-.why p {
-    margin: 0em;
+ 
+.why {
+    margin-top: 10px;
     
- } */
+ } 
 
-.choose-state label {
-    /* font-size: 50px; */
-} 
+/* .choose-state label {
+    font-size: 50px;
+}  */
 
 .entire-about {
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
+    margin: 1rem;
 }
 
 .about-top {
@@ -151,17 +166,43 @@ form {
 .about-bottom {
     height: 50%;
     display: flex;
+    /* flex-direction: row; */
 }
 
 .why-div {
-    width: 50%;
+    width: 45%;
 }
 
 .about-intro {
-    width: 50%;
+    width: 45%;
 }
 
 .image-div {
-    width: 50%;
-
+    display: flex;
+    justify-content: center;
+    width: 55%;
+    
 }
+
+.intro-img {
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 5rem;
+}
+
+.why-img {
+    border-radius: 1rem;
+    margin-top: 3rem;
+    width: 75%;
+    height: 75%;
+    margin-right: 5rem;
+}
+
+.hello-user {
+    margin-left: 50%;
+}
+
+
+
+    
+   
