--- a/code/keenen/capstone/PEP/pep_app/templates/pep_app/examiner.html
+++ b/code/keenen/capstone/PEP/pep_app/templates/pep_app/examiner.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="topnav">
-      <div>
+      <!-- <div> -->
         <a href="{% url 'index' %}">Home</a>
         <a href="{% url 'about' %}">About</a>
         {% if user.is_authenticated%}
@@ -18,9 +18,13 @@
         <a href="{% url 'login' %}">Logout</a>
         {% else %} <a href="{% url 'login' %}">Login</a>
         <a href="{% url 'signup' %}">Signup</a>
+        {% endif %}{% if user.is_authenticated %}
+        <p class="hello-user">Hello {{user.username}}!</p>
         {% endif %}
+      <!-- </div> -->
+      <div class="search">
+        <input type="text" placeholder="Search..." id="search" />
       </div>
-      <input type="text" placeholder="Search..." id="search" />
     </div>
     <br />
     <h1>Designated Pilot Examiners</h1>
