--- a/code/keenen/capstone/PEP/pep_app/templates/registration/signup.html
+++ b/code/keenen/capstone/PEP/pep_app/templates/registration/signup.html
@@ -10,19 +10,21 @@
 </head>
 <body>
     <div class="topnav">
-        <div>
+        <!-- <div> -->
           <a href="{% url 'index' %}">Home</a>
           <a href="{% url 'about' %}">About</a>
           {% if user.is_authenticated %}
           <a href="{% url 'examiner' %}">Locate Examiners</a>
           {% endif %}
-          <a href="{% url 'about' %}">Login/Logout</a>
+          <a href="{% url 'about' %}">Login</a>
           <a class="active" href="{% url 'login' %}">Signup</a>
-        </div>
-        <input type="text" placeholder="Search..." id="search" />
+        <!-- </div> -->
+        <div class="search">
+            <input type="text" placeholder="Search..." id="search" />
+          </div>
       </div>
       <br />
-      <h1>Login/Logout</h1>
+      <h1>Signup</h1>
       <hr>
     <div class="signup">
         <form method="post">
