--- a/code/wesley/Djangoscript/mapr/mapr_app/template/mapr_app/index.html
+++ b/code/wesley/Djangoscript/mapr/mapr_app/template/mapr_app/index.html
@@ -23,6 +23,8 @@
         fetch('/api/users')
         .then(res => res.json())
         .then(data => console.log(data))
+
+        groupSelector.addEventListener('change', )
     </script>
 </body>
 </html>
